--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+	// implementation(platform("io.opentelemetry:opentelemetry-bom:1.31.0"));
+	implementation("io.opentelemetry:opentelemetry-api");
+	implementation("io.opentelemetry:opentelemetry-api-logs:1.26.0-alpha");
+	implementation("io.opentelemetry:opentelemetry-sdk:1.31.0");
+    implementation("io.opentelemetry:opentelemetry-sdk-metrics:1.31.0");
+    implementation("io.opentelemetry:opentelemetry-exporter-logging:1.31.0");
+	implementation("io.opentelemetry:opentelemetry-exporter-otlp");
+    implementation("io.opentelemetry.semconv:opentelemetry-semconv:1.22.0-alpha");
 }
 
 tasks.named('test') {
